--- a/index.html
+++ b/index.html
@@ -11,16 +11,40 @@
 
   <body>
 
-  <div id="header">
-    <div id="nav">
-
-      <div id="logo">
-        EPSILON
+      <div id="header">
+        <div id="nav">
+          <!-- Created logo and subheader with html-->
+          <div id="logo">
+              EPSILON
+              <p>ART & DESIGN</p>
+          </div>
+          <!--made a basic navigation will link to other pages at a later date -->
+          <div id="links">
+            <a href="#">HOME</a>
+            <a href="#">PORTFOLIO</a>
+            <a href="#">ABOUT</a>
+            <a href="#">CONTACT</a>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
+      <!--creating area for banner image -->
+      <div id="banner">
+<!-- add image -->
+      </div>
 
+      <div id="introStrip">
+        <div id="intro">
+          <h2>Welcome:</h2>
+          <p>Hello! My name is Josh Phillips and welcome to Epsilon! I am a student at Massey Univeristy, majoring in Design Visual Communications!</p>
+            <p>Epsilon was built with the purpose of containing my Creative Art and Design Portfolios on the web!</p>
+        </div>
+        <!-- Insert profile image on right side and float left
+         <img src="" alt="">
+      -->
+        </div>
+      </div>
 
-
+      <div id="porfolioLinks">
+        <!-- add images which will like to porfolios -->
   </body>
 </html>
