changed profile size

--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@
       <div id="introStrip">
         <div id="intro">
           <h2>Welcome:</h2>
-          <p>Hello! My name is Josh Phillips and welcome to Epsilon! I am a student at Massey Univeristy, majoring in Design Visual Communications!</p>
-            <p>Epsilon was built with the purpose of containing my Creative Art and Design Portfolios on the web!</p>
-        </div>
+          <p>Hello and welcome. My name is Josh Phillips (id:17036904) and welcome to Epsilon! I am a student at Massey Univeristy, majoring in Design Visual Communications. </p>
+            <p>Epsilon was built with the purpose of containing my Creative Art and Design Portfolios on the web, as part of a project for my Web Mobile and Media class.</p>
+            <!--<img src="images/profile_image02.jpg"-->
+              </div>
+
+
+            <div id="introImage">
+              <img src="images/profile_image02.jpg" alt="Portrait">
         <!-- Insert profile image on right side and float left
          <img src="" alt="">
       -->
@@ -50,5 +55,6 @@
       <div id="porfolioStrip">
         hello
         <!-- add images which will like to porfolios -->
+      </div>
   </body>
 </html>
